updated with custom crystals and a background pattern

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                 but will remain constant for the duration of each round.
             </p>
             <p>
-                Click on the crystals to increase your current value. If you can match your value to the target value, you win.
-                If at any point your value exceeds the target value, you lose. 
+                Click on the crystals to increase your current value. 
+                If you can match your value to the target value, you win the round.
+                If at any point your value exceeds the target value, you lose the round. 
                 In either event, all values will regenerate at the start of each round.
             </p>
         </div>
@@ -49,7 +50,7 @@
         </div>
         <div class="score">
             <h3>Losses</h3>
-            <h1 id="losses"></h1>              
+            <h1 id="losses"></h1>            
         </div>
     </div>
  
